--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_IndexModals.cshtml
@@ -1,11 +1,11 @@
-﻿@model MVC.Budget.K_MYR.Models.PostCategory;
+﻿@model MVC.Budget.K_MYR.Models.CategoryPost;
 
 <section id="modals">
     <div class="modal fade" id="add-category-modal" tabindex="-1" aria-labelledby="add-category-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="add-category-Label">Add Category</h5>
+                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="add-category-label">Add Category</h5>
                     <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
