--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model MVC.Budget.K_MYR.Models.HomeViewModel;
+﻿@using System.Globalization
+@model MVC.Budget.K_MYR.Models.HomeViewModel;
 
 @{
     ViewData["Title"] = "Home Page";
@@ -49,7 +50,7 @@
                     Income
                 </h5>
                 <h5 class="accordion-header">
-                    @Model.Income.Sum(c => c.Transactions.Sum(t => t.Amount)) / @Model.Income.Sum(c => c.Budget).ToString("G4")
+                    @Model.Income.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2") / @Model.Income.Sum(c => c.Budget).ToString("C2")
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
@@ -59,16 +60,17 @@
                     @foreach (var category in Model.Income)
                     {
                         var spent = @category.Transactions.Sum(t => t.Amount);
-                        var progressbarWidth = spent / category.Budget;
+                        var progressbarWidth = spent / category.Budget * 100;
+
                         <div id="category_@category.Id" class="category p-2" data-id="@category.Id">
                             <div class="d-flex">
                                 <div class="flex-grow-1">
                                     <div class="d-flex">
                                         <div>@category.Name</div>
-                                        <div class="ms-auto">Balance: @spent / @category.Budget.ToString("G4")</div>
+                                        <div class="ms-auto">Balance: @spent.ToString("C2") / @Html.DisplayFor(m => category.Budget)</div>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: @progressbarWidth.ToString("G4")" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: @((int)progressbarWidth)%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="delete-icon ms-2">
@@ -90,7 +92,7 @@
                     Expenses
                 </h5>
                 <h5 class="accordion-header">
-                    @Model.Expenses.Sum(c => c.Transactions.Sum(t => t.Amount)) / @Model.Expenses.Sum(c => c.Budget).ToString("G4")
+                    @Model.Expenses.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2") / @Model.Expenses.Sum(c => c.Budget).ToString("C2")
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
@@ -98,18 +100,21 @@
             <div id="collapseExpenses" class="accordion-collapse collapse show" aria-labelledby="accordionExpensesHeader">
                 <div class="accordion-body">
                     @foreach (var category in Model.Expenses)
-                    {
+                    {                        
                         var spent = @category.Transactions.Sum(t => t.Amount);
-                        var progressbarWidth = spent / category.Budget;
+                        var progressbarWidth = spent / category.Budget * 100;
+
+                        var color = progressbarWidth > 85 ? "bg-danger" : progressbarWidth > 50 ? "bg-warning" : "bg-success";
+
                         <div id="category_@category.Id" class="category p-2" data-id="@category.Id">
                             <div class="d-flex">
                                 <div class="flex-grow-1">
                                     <div class="d-flex">
                                         <div>@category.Name</div>
-                                        <div class="ms-auto">Balance: @spent / @category.Budget.ToString("G4")</div>
+                                        <div class="ms-auto">Balance: @spent.ToString("C2") / @Html.DisplayFor(m => category.Budget)</div>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: @progressbarWidth.ToString("G4")" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar progress-bar-striped progress-bar-animated @color" role="progressbar" style="width: @((int)progressbarWidth)%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="delete-icon ms-2">
@@ -131,7 +136,7 @@
                     Savings
                 </h5>
                 <h5 class="accordion-header">
-                    @Model.Savings.Sum(c => c.Transactions.Sum(t => t.Amount)) / @Model.Savings.Sum(c => c.Budget).ToString("G4")
+                    @Model.Savings.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2") / @Model.Savings.Sum(c => c.Budget).ToString("C2")
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
@@ -145,7 +150,7 @@
                                 <div class="flex-grow-1">
                                     <div class="d-flex">
                                         <div>@category.Name</div>
-                                        <div class="ms-auto">Balance: @category.Transactions.Sum(t => t.Amount) / @category.Budget.ToString("G4")</div>
+                                        <div class="ms-auto">Balance: @category.Transactions.Sum(t => t.Amount).ToString("C2")  / @Html.DisplayFor(m => category.Budget)</div>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
