Progress - add modal working.

--- a/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
@@ -1,4 +1,6 @@
-@model IEnumerable<Budget.StevieTV.Models.Transaction>
+@using System.Diagnostics
+@using Microsoft.EntityFrameworkCore.Metadata.Internal
+@model Budget.StevieTV.Models.BudgetViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -6,32 +8,33 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addTransactionModal">
+    Add Transaction
+</button>
+
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TransactionType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Amount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Transactions[0].TransactionType)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Transactions[0].Date)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Transactions[0].Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Transactions[0].Amount)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Transactions[0].Category)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model.Transactions) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.TransactionType)
@@ -46,14 +49,24 @@
                 @Html.DisplayFor(modelItem => item.Amount)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.Id)
+                @Html.DisplayFor(modelItem => item.Category.Name)
             </td>
             <td>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editTransactionModal" asp-route-id="@item.Id">
+                    Edit Transaction
+                </button>
+                <partial name="_EditTransactionPartial" model="new TransactionViewModel(Model.Categories)"/>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
+
+<partial name="_AddTransactionPartial" model="new TransactionViewModel(Model.Categories)"/>
+
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
