--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -36,11 +36,40 @@
 </section>
 
 <section>
+    <div id="menu-container" data-category="0">
+        <div id="menu" class="menu">
+            @Html.AntiForgeryToken()
+            <span class="toggle">
+                <svg id="close-menu" class="close" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M368 368L144 144M368 144L144 368" /></svg>
+            </span>
+            <span class="span-box" style="--i:0">
+                <span>
+                    <svg id="details-menu" class="details" viewBox="0 0 512 512"><path d="M32 32v432a16 16 0 0016 16h432" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><rect x="96" y="224" width="80" height="192" rx="20" ry="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><rect x="240" y="176" width="80" height="240" rx="20" ry="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><rect x="383.64" y="112" width="80" height="304" rx="20" ry="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /></svg>
+                </span>
+            </span>
+            <span class="span-box" style="--i:1">
+                <span>
+                    <svg id="add-menu" class="plus" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M256 112v288M400 256H112" /></svg>
+                </span>
+            </span>
+            <span class="span-box" style="--i:2">
+                <span>
+                    <svg id="edit-menu" class="pen" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M364.13 125.25L87 403l-23 45 44.99-23 277.76-277.13-22.62-22.62zM420.69 68.69l-22.62 22.62 22.62 22.63 22.62-22.63a16 16 0 000-22.62h0a16 16 0 00-22.62 0z" /></svg>
+                </span>
+            </span>
+            <span class="span-box" style="--i:3">
+                <span>
+                    <svg id="delete-menu" class="trash" viewBox="0 0 512 512"><path d="M112 112l20 320c.95 18.49 14.4 32 32 32h184c17.67 0 30.87-13.51 32-32l20-320" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /><path stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 112h352" /><path d="M192 112V72h0a23.93 23.93 0 0124-24h80a23.93 23.93 0 0124 24h0v40M256 176v224M184 176l8 224M328 176l-8 224" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" /></svg>
+                </span>
+            </span>
+        </div>
+    </div>
+
     <div class="dashboard border mt-3" style="background-color: #1c1c1c">
         <div class="d-flex justify-content-evenly">
             <div class="m-4" style="width: 300px;"><canvas id="chart"></canvas></div>
-            <div class="m-4"  style="width: 300px;"><canvas id="chart2"></canvas></div>
-        </div>       
+            <div class="m-4" style="width: 300px;"><canvas id="chart2"></canvas></div>
+        </div>
     </div>
 
     <div class="accordion my-2" id="group_1" data-id="1">
@@ -100,7 +129,7 @@
             <div id="collapseExpenses" class="accordion-collapse collapse show" aria-labelledby="accordionExpensesHeader">
                 <div class="accordion-body">
                     @foreach (var category in Model.Expenses)
-                    {                        
+                    {
                         var spent = @category.Transactions.Sum(t => t.Amount);
                         var progressbarWidth = spent / category.Budget * 100;
 
@@ -167,7 +196,6 @@
             </div>
         </div>
     </div>
-
 </section>
 
 @await Html.PartialAsync("_IndexModals", Model.Category)
@@ -177,6 +205,5 @@
         <script src="~/lib/node_modules/chart.js/dist/chart.umd.js"></script>
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
         <script src="~/js/index.js" asp-append-version="true"></script>
-
     }
 }
