Add Category modal

--- a/Budget.StevieTV/Budget.StevieTV/Views/Category/Index.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Budget.StevieTV.Models.Category>
+@model Budget.StevieTV.Models.BudgetViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -6,30 +6,36 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCategoryModal">
+    Add Category
+</button>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Categories[0].Name)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Categories) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<partial name="_AddCategoryPartial" />
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
