--- a/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
@@ -63,6 +63,8 @@
     </tbody>
 </table>
 
+@Html.DisplayFor(model => model.RunningTotal)
+
 <partial name="_AddTransactionPartial" />
 <partial name="_EditTransactionPartial"/>
 
