--- a/Budget.StevieTV/Budget.StevieTV/Views/Transaction/_EditTransactionPartial.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Transaction/_EditTransactionPartial.cshtml
@@ -5,7 +5,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="editTransactionModalLabel">Edit Transaction - @Model.TransactionViewModel.Description</h1>
+                <h1 class="modal-title fs-5" id="editTransactionModalLabel">Edit Transaction</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-content">
