--- a/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
@@ -18,16 +18,12 @@
 <hr/>
 
 <form asp-controller="Transaction" asp-action="Index" class="row row-cols-lg-auto g-3 align-items-center">
-    <div class="form-floating col-9">
+    <div class="input-group col-9">
+        <span class="input-group-text" id="searchString">Search:</span>
         <input type="text" class="form-control" id="searchString" name="searchString" placeholder="Search Description"/>
-        <label for="searchString">Search Description</label>
-    </div>
-    <div class="col-9">
-        <select name="categoryId" asp-items="@(new SelectList(Model.Categories, nameof(Category.Id), nameof(Category.Name)))">
+        <select class="form-select" name="categoryId" asp-items="@(new SelectList(Model.Categories, nameof(Category.Id), nameof(Category.Name)))">
             <option value="">All</option>
         </select>
-    </div>
-    <div class="col-9">
         <button type="submit" class="btn btn-primary">Search</button>
     </div>
 </form>
