--- a/Budget.StevieTV/Budget.StevieTV/Views/Category/_AddCategoryPartial.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Category/_AddCategoryPartial.cshtml
@@ -2,7 +2,7 @@
 
 <div class="modal fade" id="addCategoryModal" tabindex="-1" aria-labelledby="addCategoryModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content px-3">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="addCategoryModalLabel">Add a Category</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -15,7 +15,7 @@
                     <input asp-for="CategoryViewModel.Name" class="form-control"/>
                     <span asp-validation-for="CategoryViewModel.Name" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="form-group py-1">
                     <input type="submit" value="Create" class="btn btn-primary"/>
                 </div>
             </form>
