--- a/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Transaction/Index.cshtml
@@ -77,8 +77,9 @@
                 <button type="button" class="btn btn-primary editTransactionButton" onclick="editTransaction(@item.Id)">
                     Edit
                 </button>
-                @* <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> | *@
-                <button type="button" class="btn btn-danger" onclick="deleteTransaction(@item.Id)">Delete</button>
+                <button type="button" class="btn btn-danger" onclick="deleteTransaction(@item.Id)">
+                    Delete
+                </button>
             </td>
         </tr>
     }
