--- a/Budget.StevieTV/Budget.StevieTV/Views/Transaction/_EditTransactionPartial.cshtml
+++ b/Budget.StevieTV/Budget.StevieTV/Views/Transaction/_EditTransactionPartial.cshtml
@@ -8,7 +8,7 @@
                 <h1 class="modal-title fs-5" id="editTransactionModalLabel">Edit Transaction</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-content">
+            <div class="modal-content px-2">
                 <form asp-action="Create" asp-route-id="@Model.TransactionViewModel.Id">
                     @Html.AntiForgeryToken()
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -37,7 +37,7 @@
                         <label asp-for="TransactionViewModel.CategoryId" class="control-label"></label>
                         <select asp-for="TransactionViewModel.CategoryId" class="form-control" asp-items="Model.TransactionViewModel.Categories"></select>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group py-1">
                         <input type="submit" value="Save" class="btn btn-primary"/>
                     </div>
                 </form>
