--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
@@ -11952,6 +11952,7 @@ body {
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.2s ease-out 0.4s, visibility 0.2s ease-out 0.4s;
+  z-index: 1000;
 }
 
 #menu-container.active {
@@ -12049,6 +12050,59 @@ body {
   transform: rotate(180deg);
 }
 
+.border-container {
+  position: relative;
+  z-index: 0;
+  padding: 2px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.content {
+  position: relative;
+  z-index: 10;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #1c1c1c;
+}
+
+.category-body {
+  background-color: #1c1c1c;
+}
+
+.border-animation {
+  position: absolute;
+  left: 0;
+  top: 15%;
+  content: "";
+  z-index: 0;
+  width: 100%;
+  height: 70%;
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+}
+
+.border-rotate {
+  background: radial-gradient(circle, rgb(74, 1, 105) 0%, rgb(0, 44, 255) 50%, rgb(163, 23, 23) 100%);
+  animation: rotate 4s cubic-bezier(0.8, 0, 0.2, 1) infinite;
+  opacity: 1;
+}
+
 .progress {
+  position: relative;
+  z-index: 10;
   height: 0.5rem;
+}
+
+.rotate {
+  transform: rotate(180deg);
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg);
+  }
 }
