--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.css
@@ -12023,6 +12023,18 @@ body {
 
 .dashboard {
   border-radius: var(--bs-border-radius);
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.dashboard-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.chart-container {
+  position: relative;
+  min-width: 0;
 }
 
 .accordion {
