Feat: Add statistics and visual improvements to the ui

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Category";
 }
 
-<div class="dashboard border mt-3" style="background-color: #1c1c1c">
+<div class="dashboard border mt-3">
     <div class="d-flex justify-content-evenly">
         <div class="m-4" style="width: 300px;"><canvas id="chart"></canvas></div>
         <div class="m-4" style="width: 300px;"><canvas id="chart2"></canvas></div>
