--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -4,9 +4,14 @@
 @{
     ViewData["Title"] = "Home Page";
     var expensesTotal = Model.Expenses.Sum(c => c.Transactions.Sum(t => t.Amount));
+    var expensesBudget = Model.Expenses.Sum(c => c.Budget);
     var happyExpenses = Model.Expenses.Sum(c => c.Transactions.Where(t => t.IsHappy).Sum(t => t.Amount));
     var necessaryExpenses = Model.Expenses.Sum(c => c.Transactions.Where(t => t.IsNecessary).Sum(t => t.Amount));
 
+    var incomeTotal = Model.Income.Sum(c => c.Transactions.Sum(t => t.Amount));
+    var incomeBudget = Model.Income.Sum(c => c.Budget);
+
+    var Overspending = Model.Expenses.Sum(c => Math.Max(0, c.Transactions.Sum(t => t.Amount) - c.Budget));
 }
 
 <section>
@@ -63,7 +68,7 @@
 </section>
 
 <section>
-    <div class="dashboard border" style="background-color: #1c1c1c">
+    <div class="dashboard border">
         <div class="dashboard-container">
             <div class="chart-container">
                 <canvas id="chart" data-happy="@(happyExpenses.ToString("F2", CultureInfo.InvariantCulture))"
@@ -73,6 +78,11 @@
             <div class="chart-container">
                 <h1 class="text-center">My Budget</h1>
                 <h4 class="text-center">February 2024</h4>
+                <div class="statistics mt-4">
+                    <h5 class="text-center">Total Overspending: @Overspending.ToString("C2") </h5>
+                    <h5 class="text-center">Sentiment Turnover Rate: </h5>
+                    <h5 class="text-center">Necessity Turnover Rate: </h5>
+                </div>
             </div>
             <div class="chart-container">
                 <canvas id="chart2" data-necessary="@(necessaryExpenses.ToString("F2", CultureInfo.InvariantCulture))"
@@ -89,7 +99,7 @@
                     Income
                 </h5>
                 <h5 class="accordion-header">
-                    @Model.Income.Sum(c => c.Transactions.Sum(t => t.Amount)).ToString("C2") / @Model.Income.Sum(c => c.Budget).ToString("C2")
+                    @incomeTotal.ToString("C2") / @incomeBudget.ToString("C2")
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
@@ -104,7 +114,7 @@
                         <div id="category_@category.Id" class="category" data-id="@category.Id">
                             <div class="border-container">
                                 <div class="content">
-                                    <div class="d-flex category-body">
+                                    <div class="category-body">
                                         <div>@(category.Name)</div>
                                         <div class="ms-auto">Balance: @(spent.ToString("C2")) / @(Html.DisplayFor(m => category.Budget))</div>
                                     </div>
@@ -128,7 +138,7 @@
                     Expenses
                 </h5>
                 <h5 class="accordion-header">
-                    @expensesTotal.ToString("C2") / @Model.Expenses.Sum(c => c.Budget).ToString("C2")
+                    @expensesTotal.ToString("C2") / @expensesBudget.ToString("C2")
                 </h5>
                 <img class="add-icon ms-auto" src="~/img/svg/plus.svg" alt="" width="20px;" />
                 <div class="accordion-caret rotate"></div>
@@ -137,17 +147,21 @@
                 <div class="accordion-body">
                     @foreach (var category in Model.Expenses)
                     {
-                        var spent = @category.Transactions.Sum(t => t.Amount);
-                        var progressbarWidth = spent / category.Budget * 100;
+                        var sumTransactions = category.Transactions.Sum(t => t.Amount);
+                        var progressbarWidth = sumTransactions / category.Budget * 100;
 
-                        var color = progressbarWidth > 85 ? "bg-danger" : progressbarWidth > 50 ? "bg-warning" : "bg-success";
+                        var color = progressbarWidth < 50 ? "bg-success" : progressbarWidth < 85 ? "bg-warning" : "bg-danger";
 
                         <div id="category_@category.Id" class="category" data-id="@category.Id">
                             <div class="border-container">
                                 <div class="content">
-                                    <div class="d-flex category-body">
-                                        <div>@category.Name</div>
-                                        <div class="ms-auto">Balance: @spent.ToString("C2") / @Html.DisplayFor(m => category.Budget)</div>
+                                    <div class="category-body">
+                                        <div class="me-auto">@category.Name</div>
+                                        @if (sumTransactions > category.Budget)
+                                        {
+                                            <div class="me-3">Overspending: @((sumTransactions - category.Budget).ToString("C2"))</div>
+                                        }
+                                        <div>Balance: @sumTransactions.ToString("C2") / @Html.DisplayFor(m => category.Budget)</div>                                        
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated @color" role="progressbar" style="width: @((int)progressbarWidth)%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
@@ -178,13 +192,14 @@
                 <div class="accordion-body">
                     @foreach (var category in Model.Savings)
                     {
+                        var sumTransactions = category.Transactions.Sum(t => t.Amount);
                         <div id="category_@category.Id" class="category" data-id="@category.Id">
                             <div class="border-container">
                                 <div class="content">
-                                    <div class="d-flex category-body">
+                                    <div class="category-body">
                                         <div>@category.Name</div>
-                                        <div class="ms-auto">Balance: @category.Transactions.Sum(t => t.Amount).ToString("C2")  / @Html.DisplayFor(m => category.Budget)</div>
-                                    </div>
+                                        <div class="ms-auto">Balance: @sumTransactions.ToString("C2")  / @Html.DisplayFor(m => category.Budget)</div>
+                                    </div>                                    
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
