--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/wwwroot/css/site.scss
@@ -145,6 +145,7 @@ body {
     border-radius: var(--bs-border-radius);
     margin-top: 10px;
     padding: 10px;
+    background-color: $secondary;
 }
 
 .dashboard-container {
@@ -204,6 +205,7 @@ body {
 
 .category-body {    
     background-color: $secondary;
+    display: flex;
 }
 
 .border-animation {
